Restructure documentation and simplify configuration approach
Major improvements:
- Create root-level README.md for proper GitHub display
- Move AADMigration/README.md to AADMigration/DETAILED-GUIDE.md
- Remove template approach - use direct MigrationConfig.psd1 editing
- Update all documentation to reflect compress-and-deploy workflow
- Simplify .gitignore to allow sanitized config file
- Fix documentation cross-references

User workflow now:
1. Edit AADMigration/Scripts/MigrationConfig.psd1 directly
2. Compress AADMigration folder to AADMigration.zip
3. Deploy both AADMigration.zip and Prepare-DeviceMigration.ps1
4. Run Prepare-DeviceMigration.ps1 to extract and start migration

This matches the actual script behavior and simplifies user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,11 @@
 # ===================================================================
 # SENSITIVE CONFIGURATION FILES - NEVER COMMIT
 # ===================================================================
-# Actual configuration files with real credentials/tenant IDs
-AADMigration/Scripts/MigrationConfig.psd1
-**/MigrationConfig.psd1
+# Note: MigrationConfig.psd1 contains sanitized placeholder values and is safe to commit
+# Users must configure with their real values before deployment
 
 # Custom provisioning packages (may contain tenant-specific data)
+# Note: The included .ppkg file is a template - users should replace with their tenant-specific package
 AADMigration/Files/AAD-LCS-Join_PPKG.ppkg
 **/AAD-LCS-Join_PPKG.ppkg
 *.ppkg
